@@ -22,6 +22,8 @@
           (http://www.packetfence.org/mantis/view.php?id=698)
         removed unused last_seen column from reports
           (http://www.packetfence.org/mantis/view.php?id=607)
+        GET instead of POST requests in reports.php
+          (http://www.packetfence.org/mantis/view.php?id=531)
 
 1.8.2
         added Readonly to dependencies
